--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 *.pyc
 .idea
-.env
-*.sqlite3
-temp/
-venv/
-env/
-venv3.7/
-dumps/
-locale/
-.DS_Store
-__pycache__/
+env
+db.sqlite3
+templates
+static
+DS_Store
+__pycache__
